--- a/src/components/elements/Footer.astro
+++ b/src/components/elements/Footer.astro
@@ -12,18 +12,18 @@ import Paragraph from "../shared/Paragraph.astro";
                 <a href="/" class="relative flex items-center gap-3">
                     <div class="relative w-8 h-8 overflow-hidden rounded-xl bg-white dark:bg-gray-800 shadow-lg p-1">
                         <img 
-                            src="/logos/gojo-logo.ico" 
-                            alt="GojoTech Logo" 
+                            src="/logos/phison-logo.png" 
+                            alt="Phison Digitals Logo" 
                             class="w-full h-full object-contain"
                         />
                     </div>
                     <div class="inline-flex text-xl font-bold text-heading-1">
-                        GojoTech
+                        Phison Digitals
                     </div>
                 </a>
                 <div class="hidden md:block text-heading-3">|</div>
                 <div class="text-sm text-heading-3">
-                    <a href="mailto:info@gojotech.et" class="hover:text-primary transition-colors">info@gojotech.et</a>
+                    <a href="mailto:phisondigitals@gmail.com" class="hover:text-primary transition-colors">phisondigitals@gmail.com</a>
                 </div>
             </div>
 
@@ -54,7 +54,7 @@ import Paragraph from "../shared/Paragraph.astro";
     <div class="bg-gradient-to-tl from-box-bg py-4 relative">
         <Container>
             <div class="text-center text-sm text-heading-3">
-                &copy; <span id="year"></span> GojoTech PLC. All rights reserved
+                &copy; <span id="year"></span> Phison Digitals. All rights reserved
             </div>
         </Container>
     </div>
